fix: size things properly things on mobile again

--- a/src/main.css
+++ b/src/main.css
@@ -114,6 +114,7 @@ figure {
     flex-direction: column;
     align-items: center;
     width: min-content;
+    margin: 0;
 }
 
 figcaption {
